2013-07-09 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyigrep.el (ti::macrof-debug-standard): Correct variable
	prefix start to '--'.

	* tiny/tinydiff.el (tinydiff-mode-define-keys-minibuffer-default):
	Adjust text in comments.

	* tiny/tinygnus.el (tinygnus-gnus-group-get-news-symbolic): Adjust
	comment above.

	* tiny/tinyscroll.el: Adjust commentary at the beginning.
	(tinyscroll--list-add): Correct variable name in docstring to
	'tinyscroll--list'.

	* tiny/tinypath.el: Update comments. Shuffle statement order in
	`eval-and-compile'. Move (require 'advice) to the beginning.
	(tinypath--startup-no-messages): Update docstring.
	(tinypath-time-record):Correct push to `tinypath--time-data'.
	(tinypath-load-path-remove-old): Rewrite without `remove-if'.
	Remove function; not used.
	(tinypath-load-path-remove): Add `nreverse' to preserve order.
	(tinypath-cache-p-1-new-cache): Change `cl-flet' to `cl-flet*'.
	Fixes byte compiler "path-name is not known to be defined".
	(cl-flet): Adjust indent in all of the code.

2013-06-14 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-setup): New. Handle
	Emacs compatibility.

2013-06-13 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (top level): require elp for Byte compiler.
	(tinylisp-find-variable-list): Use `custom-variable-p'.
	(tinylisp-forward-user-option): Use `custom-variable-p'.
	(tinylisp-snoop-variables): Change to `cl-remprop'.

	* tiny/tinyigrep.el (top level): Adjust union autoload.
	(tinyigrep-main-read-args): Don't quote lambda.

	* tiny/load-path.el (require): require cl only compile time.

	* ALL: Replace all files to use `call-interactively-p',
	`cl-flet' 24.3.

	* tiny/tinylibb.el (called-interactively-p): pre 23.2 emulation.

	* tiny/tinymy.el (tinymy--compile-table): Remove `aput'.

	* tiny/tinytf.el: devel (top level): Fix typo in comment.

	* tiny/tinyprocmail.el: (top level::coment): Remove `aput'.

	* tiny/tinypath.el