@@ -1,5 +1,9 @@
 2013-07-09 Tue  Jari Aalto  <jari.aalto@cante.net>
 
+	* tiny/tinylib.el (ti::compat-mouse-call-original): change
+	variable from `ti::-xe-mouse-call-original' to
+	`ti::xemacs--mouse-call-original'.
+
 	* tiny/tinyigrep.el (ti::macrof-debug-standard): Correct variable
 	prefix start to '--'.
 
